syntax = "proto3";

package apilog;

option go_package = "./apilog";

service LogService {
  rpc AddOperationLog(OperationLogRequest) returns (OperationLogResponse);
}

message OperationLogRequest {
  int64 user_id = 1;         // 用户ID
  int64 account_id = 2;      // 账号ID
  int64 business_id = 3;     // 业务ID
  string type = 4;           // 日志类型 admin后台日志 app端日志
  string method = 5;         // 请求方法 GET POST PUT DELETE
  string path = 6;           // 请求路径
  string ip = 7;             // 请求IP
  string address = 8;        // IP地址
  string req_headers = 9;   // 请求头
  string req_body = 10;      // 请求体
  string resp_headers = 11;  // 响应头
  string resp_body = 12;      // 响应体
  int32 status = 13;         // 状态 1成功 0失败
  int64 duration = 14;       // 耗时(毫秒)
}
message OperationLogResponse {
}

